# cookiecutter-fastapi

./: .docker.env  .dockerignore  .env  .env.development  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.rst  compose.yaml  loki.yaml  pyproject.toml  requirements.txt  sonar-project.properties  tempo.yaml  tox.ini
alembic/: env.py
app/: __init__.py  __main__.py  config.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: items.py  meta.py  users.py
app/api/v1/: api.py  routers.py
app/core/: config.py  config_logging.py  middleware.py
app/crud/: __init__.py  base.py  crud_item.py
app/db/: base.py  base_class.py  session.py  users.py
app/middleware/: access_log.py
app/models/: __init__.py  item.py  user.py
app/schemas/: __init__.py  item.py  user.py
config/: datasources.yaml  loki.yaml  prometheus.yaml  promtail.yaml  tempo.yaml
docs/: conf.py  index.rst
tests/: conftest.py
tests/app/api/api_v1/endpoints/: meta.py  test_items.py
{{ cookiecutter.project_slug }}/: .env.development  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  tempo.yaml
{{ cookiecutter.project_slug }}/docs/: conf.py  index.rst
{{ cookiecutter.project_slug }}/src/app/: config.py
{{ cookiecutter.project_slug }}/src/app/api/: deps.py
{{ cookiecutter.project_slug }}/src/app/crud/: base.py  crud_item.py
{{ cookiecutter.project_slug }}/src/app/db/: users.py
{{ cookiecutter.project_slug }}/src/app/models/: item.py  user.py
{{ cookiecutter.project_slug }}/src/app/schemas/: user.py
{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/tests/app/api/v1/endpoints/: test_items.py
{{ cookiecutter.repository_name }}/: .env.development  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  loki.yaml  pyproject.toml  tempo.yaml  tox.ini
{{ cookiecutter.repository_name }}/alembic/: env.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/api/: deps.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/api/v1/endpoints/: items.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/crud/: __init__.py  base.py  crud_item.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/db/: base.py  base_class.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/models/: __init__.py  item.py  user.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/schemas/: __init__.py
