[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["caerulescens <caerulescens.github@proton.me>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
uvloop = "^0.19.0"
fastapi = "^0.104.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
prometheus-fastapi-instrumentator = "^6.1.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
asgi-correlation-id = "^4.2.0"
python-rapidjson = "^1.13"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-env = "^1.0.1"
pytest-cov = "^4.1.0"
pytest-async-sqlalchemy = "^0.2.0"
pytest-postgresql = "^5.0.0"
psycopg = {extras = ["binary"], version = "^3.1.11"}
httpx = "^0.25.0"
aioresponses = "^0.7.4"
coverage = {extras = ["toml"], version = "^7.3.1"}
black = "^23.9.1"
ruff = "^0.0.290"
mypy = "^1.5.1"
sphinx = "^7.2.6"
pydocstyle = "^6.3.0"
cython = "^3.0.2"
pre-commit = "^3.4.0"

[tool.pytest.ini_options]
minversion = "7.1.1"
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 90

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
select = ["F", "E", "W", "C90", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D106"]
src = ["app", "tests"]
line-length = 88

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
